welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:24: error: '{' expected but 'case' found.
  case 1 : return Color.Red
  ^